--- a/ASSIGNMENT_3/backend/package.json
+++ b/ASSIGNMENT_3/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "ngeohash": "^0.6.3",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
